--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -7,8 +7,8 @@ version: 2
 # Set the OS, Python version and other tools you might need
 build:
   os: ubuntu-24.04
-  ## tools:
-  ##  python: "3.12"
+  tools:
+    python: "3.12"
 
 # Build documentation in the "docs/" directory with Sphinx
 sphinx:
