--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,8 @@
 [bumpversion]
-current_version = 0.1.0
-commit = True
-tag = True
+current_version = 1.0.0
+commit = False
+tag = False
+allow_dirty = True
 
 [bumpversion:file:setup.py]
 search = version='{current_version}'
